Version 1.0.6jb (jasonbuechler's update)
- Adult Swim site update required regex adjustment
- fixed: json response moved some elements around
- disabled get-metadata by default to very lazily avoid bug: metahandler.py, line 422, in _get_tvdb_meta -- ValueError: invalid literal for int() with base 10: ''

Version 1.0.6
- Code cosmetics
- Created strings.po
- Removed MetaHandler dependency

Version 1.0.4
- MetaData enabled
- Fixed fanart and thumbnails for episodes

Version 1.0.3
- Improved Resolver
- Enable/Disable Autoplay Option
- Show/Hide Locked Episodes Option

Version 1.0.1
- Minor Fixes

Version 1.0.0
- Initial Release