@@ -3,7 +3,7 @@
     <category label="33000">
         <setting id="autoplay" type="bool" label="33001" default="true" />
         <setting id="display_locked" type="bool" label="33002" default="false" />
-        <setting id="getmeta" type="bool" label="33003" default="false" />
+        <setting id="getmeta" type="bool" label="33003" default="true" />
         <setting id="rm_db" type="action" label="33004" option="close" action="RunPlugin(plugin://plugin.video.adultswim/?action=rm_db)"/>
     </category>
 </settings>
